Resize window --> adjust cards
* Card grid is 3X4 instead of 4X3 on narrow widths
* TODO: Still needs to reposition all cards correctly afterward

--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -173,6 +173,12 @@ button.ui-button {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             grid-template-rows: repeat(3, 1fr);
+
+            @media screen and (max-width:900px) {
+                grid-template-columns: repeat(3, 1fr);
+                grid-template-rows: repeat(4, 1fr);
+            }
+
             gap: 1rem;
 
             .playspot {
