Player piles not set if fewer players

--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -201,7 +201,7 @@ button.ui-button {
             gap: 3rem;
             // stretch the flex items to fill the container
             align-items: stretch;
-            justify-content: right;
+            justify-content: center;
             transform-style: preserve-3d;
 
             .player {
