Slightly less weird reshuffle

--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -41,7 +41,7 @@ button.ui-button {
 .settlegame {
     background: linear-gradient(to bottom, #4a4b46 0%,#7f827a 100%);
     color: #fff;
-    padding: 2rem;
+    padding: 2rem 2rem 6rem 2rem;
     perspective: 24in;
 
     h1 {
