--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -17,6 +17,7 @@ $pink: #ff22a7;
 button {
     border: 0;
     cursor: pointer;
+    color: #4a4a4a;
     
     &[disabled]{
         cursor: default;
@@ -134,11 +135,11 @@ button.ui-button {
         --cardBorderRadius: calc(var(--cardWidth) * 0.04);
 
         display: grid;
-        grid-template-columns: 1fr 4fr;
+        grid-template-columns: 0.72fr 4fr; // 0.72 is ratio of card height to width
         grid-template-areas: 
             "drawarea playarea"
             "playerarea playerarea";
-        column-gap: 1rem;
+        column-gap: 2rem;
         row-gap: 4rem;
         transform-origin: center bottom;
         transform: rotateX(35deg);
@@ -155,16 +156,36 @@ button.ui-button {
         .drawarea {
             grid-area: drawarea;
             transform-style: preserve-3d;
+            display: flex;
+            flex-direction: column;
+            align-items:end;
+            justify-content: end;
+            gap: 1.5rem;
 
             .drawpile {
                 position: relative;
                 transform-style: preserve-3d;
-                top: 70%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                width: var(--cardWidth);
-                height: auto;
-                aspect-ratio: 3.5/2.5;
+                background-color: rgba(255,255,255,0.15);
+                flex-grow: 0;
+                width: auto;
+                height: var(--cardWidth);
+                aspect-ratio: 2.5/3.5;
+
+                .center {
+                    position: absolute;
+                    width: 1px;
+                    height: 1px;
+                    left: 50%;
+                    top: 50%;
+                    background-color: #fff;
+                }
+            }
+
+            .buttonholder {
+                button {
+                    font-size: 2rem;
+                    display: block;
+                }
             }
         }
 
@@ -360,6 +381,7 @@ details.debug {
 
 .card {
     display: block;
+    // visibility: hidden;
     position: absolute;
     width: var(--cardWidth);
     aspect-ratio: 3.5/2.5;
