--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -473,7 +473,13 @@ details.debug {
         backface-visibility: hidden;
         transform: rotateY(180deg);
         border: 0.5px solid transparent;
-        border-color: rgb(255,255,255,0.5) rgba(0,0,0,0.5) ;
+        border-color: rgb(255,255,255,0.5) rgba(0,0,0,0.5);
+    }
+
+    &.horizontal {
+        .back {
+            border-color: rgba(0,0,0,0.5) rgb(255,255,255,0.5);
+        }
     }
 
 }
