--- a/src/lib/styles/card.scss
+++ b/src/lib/styles/card.scss
@@ -1,60 +1,59 @@
 .card {
-    display: block;
-    position: absolute;
-    width: var(--cardWidth);
-    aspect-ratio: 3.5/2.5;
-    transition: 0.5s all ease-in-out;
-    transition-delay: calc(var(--delay) * 100ms);
-    transform-style: preserve-3d;
-    transform: 
-        translate3d(calc(var(--x) * 1px), calc(var(--y) * 1px), calc(var(--i) * 1.5px))
-        rotateX(calc(var(--rotX) * 1deg)) rotateY(calc(var(--rotY) * 1deg)) rotateZ(calc(var(--rotZ) * 1deg)) ;
-    perspective: 1000px;
-    
-    .front {
-        display: flex;
-        gap: 4%;
-        background-color: #f5f5e9;
-        border-radius: 0.5rem;
-        align-items: center;
-        justify-content:center;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        backface-visibility: hidden;
-        border: 0.5px solid transparent;
-        border-color: rgb(255,255,255,0.5) rgba(0,0,0,0.5) ;
+	display: block;
+	position: absolute;
+	width: var(--cardWidth);
+	aspect-ratio: 3.5/2.5;
+	transition: 0.5s all ease-in-out;
+	transition-delay: calc(var(--delay) * 100ms);
+	transform-style: preserve-3d;
+	transform: translate3d(calc(var(--x) * 1px), calc(var(--y) * 1px), calc(var(--i) * 1.5px))
+		rotateX(calc(var(--rotX) * 1deg)) rotateY(calc(var(--rotY) * 1deg))
+		rotateZ(calc(var(--rotZ) * 1deg));
+	perspective: 1000px;
 
-        img {
-            height: 65%;
-            width: auto;
-        }
-    }
+	.front {
+		display: flex;
+		gap: 4%;
+		background-color: #f5f5e9;
+		border-radius: 0.5rem;
+		align-items: center;
+		justify-content: center;
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		backface-visibility: hidden;
+		border: 0.5px solid transparent;
+		border-color: rgb(255, 255, 255, 0.5) rgba(0, 0, 0, 0.5);
 
-    &.oval {
-        .front {
-            gap: 6%;
-        }
-    }
+		img {
+			height: 65%;
+			width: auto;
+		}
+	}
 
-    .back {
-        display: block;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #A12596;
-        background-image:url('/images/back-pattern1.svg');
-        border-radius: 0.5rem;
-        background-size: auto 56%;
-        background-position: center;
-        backface-visibility: hidden;
-        transform: rotateY(180deg);
-        border: 0.5px solid transparent;
-        border-color: rgb(255,255,255,0.5) rgba(0,0,0,0.5) ;
-    }
+	&.oval {
+		.front {
+			gap: 6%;
+		}
+	}
 
+	.back {
+		display: block;
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		background-color: #a12596;
+		background-image: url('/images/back-pattern1.svg');
+		border-radius: 0.5rem;
+		background-size: auto 56%;
+		background-position: center;
+		backface-visibility: hidden;
+		transform: rotateY(180deg);
+		border: 0.5px solid transparent;
+		border-color: rgb(255, 255, 255, 0.5) rgba(0, 0, 0, 0.5);
+	}
 }
