--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -142,6 +142,16 @@ button.ui-button {
 		transform-style: preserve-3d;
 		margin-top: -25%; // to account for the rotation
 
+        @media (orientation: portrait) {
+            // Move draw pile above play spots
+            grid-template-columns: 1fr;
+            grid-template-areas:
+                'drawarea'
+                'playarea'
+                'playerarea';
+            margin-top: -40%;
+        }
+
 		.displaycards {
 			position: absolute;
 			left: 0;
@@ -192,11 +202,6 @@ button.ui-button {
 			display: grid;
 			grid-template-columns: repeat(4, 1fr);
 			grid-template-rows: repeat(3, 1fr);
-
-			@media screen and (max-width: 900px) {
-				grid-template-columns: repeat(3, 1fr);
-				grid-template-rows: repeat(4, 1fr);
-			}
 
 			gap: 1rem;
 
@@ -268,7 +273,7 @@ button.ui-button {
 						font-size: 1.5rem;
 						transform-style: preserve-3d;
 						transition: 0.2s all ease-in-out;
-						white-space: nowrap;
+						// white-space: nowrap;
 					}
 
 					.points {
