Make sure title is over game

--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -45,6 +45,10 @@ button.ui-button {
 	padding: 2rem 2rem 6rem 2rem;
 	perspective: 24in;
 
+	header {
+		z-index: 9;
+	}
+
 	h1 {
 		color: #fff;
 		font-size: 3rem;
