--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -37,6 +37,15 @@ button.ui-button {
 	&:hover {
 		background-color: #e0401c;
 	}
+
+	&.outline {
+		background-color: transparent;
+		border: 1px solid #fff;
+
+		&:hover {
+			background-color: rgba(255, 255, 255, 0.1);
+		}
+	}
 }
 
 .settlegame {
