--- a/src/lib/styles/page.scss
+++ b/src/lib/styles/page.scss
@@ -139,8 +139,8 @@ button.ui-button {
 
 		button.close {
 			position: absolute;
-			right:0;
-			top:0;
+			right: 0;
+			top: 0;
 			background-color: transparent;
 			color: #fff;
 			font-size: 2rem;
@@ -513,7 +513,7 @@ dialog {
 	border: 0;
 	padding: 2rem;
 	box-shadow: 0 15px 19px 0 rgba(0, 0, 0, 0.2);
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 
 	&::backdrop {
 		transition: 2s all ease-in-out;
@@ -524,15 +524,29 @@ dialog {
 
 	h2 {
 		margin-top: 0;
+		margin-bottom: 1rem;
+
+		& + p {
+			margin-top: 0.5rem;
+		}
 	}
 
 	.formfield {
 		margin-bottom: 1rem;
 
 		input {
-			font-size: 1.5rem;
 			margin-left: 0.5rem;
 		}
+	}
+
+	input:not([type='submit']) {
+		background-color: rgba(255, 255, 255, 0.8);
+		color: #4a4a4a;
+		border: none;
+		border-radius: 0.25rem;
+		padding: 0.25rem 0.5rem;
+		font-size: 1em;
+		font-family: var(--system-ui);
 	}
 
 	input[type='submit'] {
@@ -550,5 +564,9 @@ dialog {
 		&:hover {
 			background-color: #e0401c;
 		}
+	}
+
+	.buttonholder {
+		margin-top: 2rem;
 	}
 }
